# ayershome-org-website

./: .envrc  .gitignore  CAR_TEMPLATE_GUIDE.md  CLAUDE.md  LICENSE.md  Makefile  README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/: hello-world.md
content/pages/: about.md  projects.md
content/pages/cars/: 1975-ford-granada.md  1976-mercury-monarch.md  1979-honda-accord.md  1980-ford-mustang.md  1987-mercury-sable.md  1995-honda-civic.md  ford-granada.md  ford-mustang.md  honda-accord.md  mercury-monarch.md  mercury-sable.md
plugins/: car_navigation.py
scripts/: TOOL_TEMPLATE.sh  claude-cli.sh  codex-cli.sh  deploy.sh  example-tool.sh  run-ci.sh
scripts/common/: preamble.sh
themes/monospace/static/css/: style.css
themes/monospace/templates/: article.html  base.html  car.html  index.html  page.html
