[project]
name = "ayershome-org-website"
version = "0.0.1"
description = "Source for my home webstie"
readme = "README.md"
license = { text = "Copyright (c) 2026 Eric Z. Ayers, All rights reserved." }
requires-python = ">=3.14"
authors = [
    { name = "Eric Z. Ayers" }
]

dependencies = [
]

# Note: Use [dependency-groups] for uv, not [project.optional-dependencies]

[project.scripts]
# CLI entry points for tools (optional, can also use shell wrappers)
# arkove-validate = "tools.validate_config:main"


[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "pyright>=1.1.0",
    "ruff>=0.2.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tools"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["tools", "tests"]
exclude = ["**/__pycache__", ".venv"]
